chore: update test workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,6 +2,13 @@ name: "Rust Test Suite"
 
 on:
   push:
+    paths:
+      - 'src/**'
+      - 'Cargo.toml'
+      - 'Cargo.lock'
+      - '.github/workflows/rust.yml'
+      - 'rust-toolchain.toml'
+      - 'build.rs'
   pull_request:
 
 concurrency:
