--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -12,9 +12,9 @@ on:
         required: true
         type: string
       bin_name:
-        description: "Binary name"
+        description: "Binary name (must match Cargo.toml package name)"
         required: false
-        default: template
+        default: ""
         type: string
   release:
     types: [created]
@@ -24,13 +24,14 @@ permissions:
 
 env:
   CARGO_TERM_COLOR: always
+  BIN_NAME: vibe-rust
 
 jobs:
   build:
     name: Build & Upload Binaries
     runs-on: ${{ matrix.os }}
     env:
-      BIN_NAME: ${{ inputs.bin_name || 'vibe-rust-template' }}
+      BIN_NAME: ${{ inputs.bin_name || env.BIN_NAME }}
       VERSION: ${{ inputs.tag_name || github.event.release.tag_name }}
       UPLOAD_URL: ${{ inputs.upload_url || github.event.release.upload_url }}
     strategy:
@@ -50,6 +51,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Validate required inputs
+        shell: bash
+        run: |
+          if [ -z "${{ env.BIN_NAME }}" ]; then
+            echo "Error: bin_name is required but not provided"
+            echo "Please provide bin_name input that matches your Cargo.toml package name"
+            exit 1
+          fi
+          echo "Using binary name: ${{ env.BIN_NAME }}"
 
       - name: Install deps (Linux)
         if: runner.os == 'Linux'
@@ -74,7 +85,8 @@ jobs:
           staging="${BIN_NAME}-${version}-${{ matrix.target }}"
           mkdir -p "$staging"
           cp README.md "$staging/"
-          cp target/${{ matrix.target }}/release/${BIN_NAME} "$staging/"
+          # Use the actual binary name from Cargo.toml
+          cp target/${{ matrix.target }}/release/${BIN_NAME} "$staging/${BIN_NAME}"
           tar czf "$staging.tar.gz" "$staging"
           echo "ASSET=$staging.tar.gz" >> $GITHUB_ENV
 
