--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -16,6 +16,21 @@ on:
         required: false
         default: ""
         type: string
+  workflow_dispatch:
+    inputs:
+      tag_name:
+        description: "Tag name (e.g. v1.2.3)"
+        required: true
+        type: string
+      upload_url:
+        description: "GitHub release upload_url"
+        required: false
+        type: string
+      bin_name:
+        description: "Binary name (must match Cargo.toml package name)"
+        required: false
+        default: ""
+        type: string
   release:
     types: [created]
 
