--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -53,7 +53,7 @@ jobs:
         build: [linux, macos-arm]
         include:
           - build: linux
-            os: ubuntu-20.04
+            os: ubuntu-latest
             rust: stable
             target: x86_64-unknown-linux-gnu
           - build: macos-arm
