fix: duplicate workflow trigger

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -31,8 +31,6 @@ on:
         required: false
         default: ""
         type: string
-  release:
-    types: [created]
 
 permissions:
   contents: write
@@ -107,8 +105,7 @@ jobs:
         shell: bash
         run: |
           version="${VERSION#v}" # strip leading v
-          commit_short="${GITHUB_SHA:0:7}" # first 7 characters of commit hash
-          staging="${BIN_NAME}-${version}-${commit_short}-${{ matrix.target }}"
+          staging="${BIN_NAME}-${version}-${{ matrix.target }}"
           mkdir -p "$staging"
           cp README.md "$staging/"
           # Use the actual binary name from Cargo.toml
