--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,8 @@ jobs:
   fmt:
     name: rustfmt
     runs-on: ubuntu-latest
+    # Skip if commit message starts with "chore(main): release" (release-please)
+    if: "!startsWith(github.event.head_commit.message, 'chore(main): release')"
 
     steps:
       - name: Checkout repository
@@ -65,6 +67,8 @@ jobs:
   clippy:
     name: clippy
     runs-on: ubuntu-latest
+    # Skip if commit message starts with "chore(main): release" (release-please)
+    if: "!startsWith(github.event.head_commit.message, 'chore(main): release')"
 
     steps:
       - name: Checkout repository
@@ -107,6 +111,8 @@ jobs:
   test:
     name: tests (stable)
     runs-on: ubuntu-latest
+    # Skip if commit message starts with "chore(main): release" (release-please)
+    if: "!startsWith(github.event.head_commit.message, 'chore(main): release')"
     needs:
       - fmt
       - clippy
@@ -149,7 +155,8 @@ jobs:
   bench:
     name: benchmarks
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    # Skip if commit message starts with "chore(main): release" (release-please) OR not a push event
+    if: "github.event_name == 'push' && !startsWith(github.event.head_commit.message, 'chore(main): release')"
     needs:
       - test
 
