--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -76,9 +76,21 @@ jobs:
           fi
           echo "Using binary name: $BIN_NAME"
 
+      - name: Disable man-db triggers (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          # https://github.com/actions/runner-images/issues/10977
+          # Disables man-db triggers, which have been a cause of huge (but variable) delays in github action jobs
+          # completing; we're seeing pauses on this step of 120+ seconds in some rare cases.
+          echo "set man-db/auto-update false" | sudo debconf-communicate
+          sudo dpkg-reconfigure man-db
+
       - name: Install deps (Linux)
         if: runner.os == 'Linux'
-        run: sudo apt-get update && sudo apt-get install -y libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libspeechd-dev libxkbcommon-dev libssl-dev libgtk-3-dev
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libspeechd-dev libxkbcommon-dev libssl-dev libgtk-3-dev
+          version: 1.0
 
       - name: Install toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
