--- a/.github/workflows/pr-asset-build.yml
+++ b/.github/workflows/pr-asset-build.yml
@@ -23,6 +23,7 @@ jobs:
       pr_number: ${{ github.event.issue.number }}
       pr_head_sha: ${{ steps.get_pr_info.outputs.head_sha }}
       pr_head_ref: ${{ steps.get_pr_info.outputs.head_ref }}
+      comment_id: ${{ steps.create_comment.outputs.comment_id }}
     steps:
       - name: Get PR information
         id: get_pr_info
@@ -51,9 +52,9 @@ jobs:
                 repo: context.repo.repo,
                 username: context.actor
               });
-              
+
               const hasWriteAccess = ['admin', 'maintain', 'write'].includes(permission.permission);
-              
+
               const fs = require('fs');
               if (hasWriteAccess) {
                 console.log(`User ${context.actor} has ${permission.permission} access - allowing build`);
@@ -67,6 +68,20 @@ jobs:
               const fs = require('fs');
               fs.appendFileSync(process.env.GITHUB_OUTPUT, `is_contributor=false\n`);
             }
+
+      - name: Create initial status comment
+        id: create_comment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: comment } = await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: `🔄 Building assets for PR #${context.issue.number} (commit: \`${{ steps.get_pr_info.outputs.head_sha }}\`)...`
+            });
+            const fs = require('fs');
+            fs.appendFileSync(process.env.GITHUB_OUTPUT, `comment_id=${comment.id}\n`);
 
   build_assets:
     name: Build PR Assets
@@ -95,18 +110,6 @@ jobs:
         with:
           ref: ${{ needs.check_trigger.outputs.pr_head_sha }}
           fetch-depth: 0
-
-      - name: Add build started comment
-        if: matrix.build == 'linux' # Only comment once
-        uses: actions/github-script@v7
-        with:
-          script: |
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: ${{ env.PR_NUMBER }},
-              body: `🔄 Building assets for PR #${{ env.PR_NUMBER }} (commit: \`${{ env.PR_HEAD_SHA }}\`)...`
-            });
 
       - name: Generate version string
         id: version
@@ -138,45 +141,46 @@ jobs:
     if: always() && needs.check_trigger.outputs.should_build == 'true'
     runs-on: ubuntu-latest
     steps:
-      - name: Comment on PR with results
+      - name: Update comment with results
         uses: actions/github-script@v7
         with:
           script: |
             const prNumber = ${{ needs.check_trigger.outputs.pr_number }};
             const headSha = '${{ needs.check_trigger.outputs.pr_head_sha }}';
             const shortSha = headSha.substring(0, 7);
-            
+            const commentId = ${{ needs.check_trigger.outputs.comment_id }};
+
             // Check if build jobs succeeded
             const buildResult = '${{ needs.build_assets.result }}';
-            
+
             let commentBody;
-            
+
             if (buildResult === 'success') {
               commentBody = `✅ **Asset build completed successfully!**
-            
+
             **PR**: #${prNumber}
             **Commit**: \`${shortSha}\`
             **Retention**: 1 day
-            
+
             📦 **Download artifacts:**
             - [Linux (x86_64)](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) - Look for \`vibe-rust-pr${prNumber}-linux\`
             - [macOS (ARM64)](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) - Look for \`vibe-rust-pr${prNumber}-macos-arm\`
-            
+
             > 💡 Click the links above, then scroll down to the "Artifacts" section to download.
-            > 
+            >
             > ⚠️ **Note**: Artifacts will be automatically deleted after 1 day.`;
             } else {
               commentBody = `❌ **Asset build failed**
-            
+
             **PR**: #${prNumber}
             **Commit**: \`${shortSha}\`
-            
+
             Please check the [workflow run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) for details.`;
             }
-            
-            await github.rest.issues.createComment({
+
+            await github.rest.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: prNumber,
+              comment_id: commentId,
               body: commentBody
             });
